--- a/src/app/cmps/header/header.component.html
+++ b/src/app/cmps/header/header.component.html
@@ -4,7 +4,7 @@
             <div class="col-lg-3 m-0">
                 <h3 class="m-0">COMPANY
                     <a routerLink="/admin">
-                        <i class="fa fa-angle-double-up text-white fs-3" aria-hidden="true"></i>
+                        <i class="fa fa-angle-double-up fs-3 transition" aria-hidden="true"></i>
                     </a>  
                     CRM</h3>
             </div>
