--- a/src/app/cmps/sidenav/sidenav.component.html
+++ b/src/app/cmps/sidenav/sidenav.component.html
@@ -1,6 +1,6 @@
 <div class="bg-dark sideNav">
-    <a routerLink="/admin" [routerLinkActive]="['active']"><i class="fa fa-user fs-5 pe-1" aria-hidden="true"></i> Customers</a>
-    <a routerLink="/admin/contacts" [routerLinkActive]="['active']"><i class="fa fa-envelope pe-1" aria-hidden="true"></i> Contacts</a>
-    <a routerLink="/admin/customers" [routerLinkActive]="['active']"><i class="fa fa-shopping-cart pe-1"></i> Leads</a>
-    <a routerLink="/admin/customers" [routerLinkActive]="['active']"><i class="fa fa-signal pe-1"></i> Reports</a>
+    <a class="transition" routerLink="/admin" [routerLinkActive]="['active']"><i class="fa fa-user fs-5 pe-1" aria-hidden="true"></i> Customers</a>
+    <a class="transition" routerLink="/admin/contacts" [routerLinkActive]="['active']"><i class="fa fa-envelope pe-1" aria-hidden="true"></i> Contacts</a>
+    <a class="transition" routerLink="/admin/customers" [routerLinkActive]="['active']"><i class="fa fa-shopping-cart pe-1"></i> Leads</a>
+    <a class="transition" routerLink="/admin/customers" [routerLinkActive]="['active']"><i class="fa fa-signal pe-1"></i> Reports</a>
 </div>
