--- a/src/app/components/contactlist/contactlist.component.html
+++ b/src/app/components/contactlist/contactlist.component.html
@@ -2,6 +2,17 @@
     <div class="py-2 px-3 my-4" [style]="{background:'lightgrey'}">
       <h2><i class="fa fa-phone" aria-hidden="true"></i> Contacts</h2>
     </div>
+    <div class="row">
+      <div class="col-lg-3 d-flex">
+        <div class="input-group-prepend">
+          <span class="input-group-text d-block">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </span>
+        </div>
+        <!-- Search on input by using (input) with $event -->
+        <input (input)="searchByName($event)" type="text" class="form-control" placeholder="Name" >
+      </div>
+    </div>
     <div class="mt-4">
         <table class="table table-striped table-bordered">
           <thead>
@@ -15,7 +26,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let item of _ar; let i = index">
+            <tr *ngFor="let item of contactsArray; let i = index">
               <td>
                 {{i + 1}}
               </td>
