--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -44,7 +44,7 @@
         <div class="mt-5">
           <a class="text-success text-decoration-none" routerLink="/">Already user? Back to login</a>
           <br>
-          © CRM Systems 2021
+          © Airplane Modes 2021
         </div>
       </form>
     </div>
