--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,9 @@
                     CRM</h3>
             </div>
             <nav class="text-end col-lg-9">
-                <span><i class="fa fa-user-circle me-2" aria-hidden="true"></i>{{user.email || "Loading..."}}</span>
+                <span><i class="fa fa-user-circle me-2" aria-hidden="true"></i>
+                    {{ user.email || "Loading..." }}
+                </span>
                 <button (click)="logOut()" class="btn btn-sm btn-warning ms-3">Log out</button>
             </nav>    
         </div>
