--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,15 +1,16 @@
 <div class="container-fluid">
     <div class="container text-center p-5">
-      <h1 class="display-4">COMPANY
-        <i class="fa fa-angle-double-up text-success" aria-hidden="true"></i>
-        CRM
-      </h1>
+        <h1 class="display-4">COMPANY
+            <i class="fa fa-angle-double-up text-success" aria-hidden="true"></i>
+            CRM
+        </h1>
       <form #f="ngForm" (ngSubmit)="onSub()" class="col-lg-6 mx-auto">
         <h5>Creating a new account</h5>
         <div>
           <input name="email" #inputEmail="ngModel" ngModel type="email" class="form-control"
             placeholder="E-mail..." required email>
-          <div *ngIf="inputEmail.touched && inputEmail.invalid" class="text-danger text-start">Enter valid mail</div>
+          <div *ngIf="inputEmail.touched && inputEmail.invalid" class="text-danger text-start">
+              Enter valid mail</div>
         </div>
         <div>
           <input name="password" #inputPass="ngModel" ngModel type="password" class="form-control mt-3"
