--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,8 @@
                     <a routerLink="/admin">
                         <i class="fa fa-angle-double-up fs-3 transition" aria-hidden="true"></i>
                     </a>  
-                    CRM</h3>
+                    CRM
+                </h3>
             </div>
             <nav class="text-end col-lg-9">
                 <span><i class="fa fa-user-circle me-2" aria-hidden="true"></i>
